# branchy-text-editor

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  bindings.ts  stateStore.ts  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  error.rs  files_api.rs  language.rs  lib.rs  main.rs
src-tauri/src/backend_api/: editor_info.rs  file_data.rs  file_system.rs  mod.rs  responses.rs
src-tauri/src/backend_api/middleware/: editor.rs  file_data.rs  file_system.rs  mod.rs
src-tauri/src/treesitter_backend/: highlighter.rs  mod.rs  parser.rs  query.rs  theme.rs
src/backendApi/: bindings.ts  invocation.ts  stateStore.ts
src/component/fileExplorer/: fileExplorer.tsx  style.module.css  style.module.scss
src/component/fileExplorer/component/: directoryArrows.tsx  style.module.css  style.module.scss
src/component/menu/: menu.tsx  style.module.css
src/component/menu/component/about/: about.tsx
src/component/notification_toast/: toast.tsx
src/component/textEditor/: editor.module.scss  styles.module.css  styles.module.scss  textEditor.tsx
src/component/textEditor/components/: editor.tsx  tokenProvider.ts
