[package]
name = "tauri_text_editor"
version = "0.0.0"
description = "A Text editor build from tauri and SolidJs"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tree-sitter = "0.20.10"
debug-ignore = "1.0.5"
rand = "0.8.5"
path-absolutize = "3.1.1"
thiserror = "1.0.50"
home = "0.5.5"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
