[package]
name = "branchy-text-editor"
version = "0.1.0"
description = "A Text editor build from tauri and SolidJs"
authors = ["you"]
license = "MIT"
repository = "https://github.com/TodayNightt/branchy-text-editor.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "dialog-all",
    "window-unmaximize",
    "window-show",
    "window-unminimize",
    "window-start-dragging",
    "window-minimize",
    "window-maximize",
    "window-hide",
    "window-close",
] }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
tree-sitter-rust = "0.20.4"
tree-sitter-html = "0.19.0"
tree-sitter-typescript = "0.20.3"
tree-sitter-json = "0.20.1"
tree-sitter-java = "0.20.2"
rand = "0.8.5"
path-absolutize = "3.1.1"
thiserror = "1.0.50"
home = "0.5.5"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
derivative = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
