[package]
name = "branchy-text-editor"
version = "0.1.0"
description = "A Text editor build from tauri and SolidJs"
authors = ["you"]
license = "MIT"
repository = "https://github.com/TodayNightt/branchy-text-editor.git"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
] }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
tree-sitter-rust = "0.20.4"
tree-sitter-html = "0.19.0"
tree-sitter-typescript = "0.20.3"
tree-sitter-json = "0.20.1"
tree-sitter-java = "0.20.2"
rand = "0.9.2"
path-absolutize = "3.1.1"
thiserror = "1.0.50"
home = "0.5.5"
specta= { version = "2.0.0-rc.21", features = ["derive", "function"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["javascript", "derive", "typescript"] }
derivative = "2.2.0"
tauri-plugin-dialog = "2"


specta-typescript="0.0.9"

[patch.crates-io]
# Waiting for release of https://github.com/tauri-apps/tauri/pull/12371
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "75d56e8364fb203387bb5a5235f316dd7dfa6acd" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
